"Fixed:navbarauto crud, controller, route generate Pending: auto api generate after button click"
